# x86Intrinsics

./: CMakeLists.txt  LICENSE  main.cpp  readme.md  x86instructions.cpp  x86instructions.hpp
